--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,7 @@
+/*Note: This project came with pre-existing html and css files. I did not write these files! I only wrote the app.js file. The challenge for this project was to write a js file without constructing the html or css.*/
+
+
+
 /*---------------------------------------------------------------------------------
    Common Styles
 ---------------------------------------------------------------------------------*/
